<resources>
    <string name="app_name">Botl</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_new_post">NewPost</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="PlusSign">+</string>
    <string name="reply">reply</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phonenumber">Phone Number</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">No account yet? Create one</string>
    <string name="prompt_verification">Verification Code</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_verification_code">Incorrect verification code</string>
    <string name="error_incorrect_login">Username or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="title_activity_registration_verification">Registration Verification</string>
    <string name="confirm">Confirm</string>

    <!-- Strings related to account settings -->
    <string-array name="chat_sorting">
        <item>Distance</item>
        <item>Rating</item>
        <item>Time</item>
    </string-array>

    <!-- font awesome -->
    <string name="icon_refresh">&#xf021;</string>
    <string name="icon_chevron_right">&#xf105;</string>
    <string name="icon_plus">&#xf067;</string>
</resources>
